# monitoramento_patentes

./: .gitignore  README.md  new_ops.db  ops.db  ops_auth.py  ops_extract_patents_infos.py  ops_patents_extract_store.py  ops_query.py  pyproject.toml
bots/: __init__.py  ops_auth.py  ops_extract_patents_infos.py  ops_patents_extract_store.py  report_maker.py  top_players_generator.py
monitor_patents_ops/: __init__.py
monitor_patents_ops/bots/: __init__.py  ops_auth.py  ops_extract_patents_infos.py  ops_patents_extract_store.py  report_maker.py  top_players_generator.py
monitor_patents_ops/utils/: exports.py  http_request.py  ops_search_query_maker.py  queries_sqlite.py  xml_parser.py
utils/: __init__.py  exports.py  http_request.py  ops_search_query_maker.py  queries_sqlite.py  query_maker.py  xml_parser.py
